src/common/components/ArticleDetails.scss
.article-details_d2vnmv {
	background-color: white;
	border: 1px solid #e0e0e0;
	padding: 7px;
}
.article-details_d2vnmv > .small-title {
	display: none;
}
.article-details_d2vnmv > .columns {
	display: flex;
}
.article-details_d2vnmv > .columns > .stats {
	flex: 0 0 auto;
	width: 62px;
	display: flex;
	flex-flow: column;
	justify-content: center;
}
.article-details_d2vnmv > .columns > .stats > .stat {
	display: flex;
	flex-flow: column;
	justify-content: center;
	align-items: center;
	text-decoration: none;
}
.article-details_d2vnmv > .columns > .stats > .stat:not(:last-child) {
	margin-bottom: 6px;
}
.article-details_d2vnmv > .columns > .stats > .stat.comments > label {
	text-decoration: underline;
	cursor: pointer;
}
.article-details_d2vnmv > .columns > .stats > .stat > .count {
	font-size: 18px;
}
.article-details_d2vnmv > .columns > .stats > .stat > label {
	display: block;
	font-size: 11px;
	max-width: 100%;
	overflow: hidden;
	text-overflow: ellipsis;
	margin-top: -4px;
}
.article-details_d2vnmv > .columns > .star-container {
	flex: 0 0 auto;
	width: 20px;
	margin-right: 5px;
}
.article-details_d2vnmv > .columns > .article {
	flex: 1 1 auto;
	padding-right: 5px;
}
.article-details_d2vnmv > .columns > .article > .title-link {
	font-size: 18px;
	text-decoration: none;
	font-weight: bold;
}
.article-details_d2vnmv > .columns > .article > .meta {
	margin-top: 5px;
}
.article-details_d2vnmv > .columns > .small-stats-article {
	display: none;
}
.article-details_d2vnmv > .columns > .bubble {
	flex: 0 0 auto;
	width: 62px;
	display: flex;
	flex-flow: column;
	justify-content: center;
}
.article-details_d2vnmv > .columns > .bubble > .container {
	position: relative;
}
.article-details_d2vnmv > .columns > .bubble > .container > .speech-bubble {
	display: block;
}
.article-details_d2vnmv > .columns > .bubble > .container > .length {
	position: absolute;
	top: 15%;
	width: 100%;
	text-align: center;
}
.article-details_d2vnmv > .columns > .share {
	flex: 0 0 auto;
	display: flex;
	flex-flow: column;
	justify-content: center;
	padding-left: 7px;
}
.article-details_d2vnmv > .columns > .share > .share-control_mnbspk > .children > .icon {
	width: 16px;
	height: 16px;
	cursor: pointer;
}

@media (max-width: 450px) {
	.article-details_d2vnmv > .small-title {
		display: flex;
		margin-bottom: 2px;
	}
	.article-details_d2vnmv > .small-title > .star-container {
		flex: 0 0 auto;
		width: 20px;
		margin-right: 5px;
	}
	.article-details_d2vnmv > .small-title > .title-link {
		flex: 0 0 auto;
		font-size: 16px;
		text-decoration: none;
		font-weight: bold;
	}
	.article-details_d2vnmv > .columns > .stats,
	.article-details_d2vnmv > .columns > .star-container,
	.article-details_d2vnmv > .columns > .article {
		display: none;
	}
	.article-details_d2vnmv > .columns > .small-stats-article {
		flex: 1 1 auto;
		display: flex;
		flex-flow: column;
		justify-content: space-between;
		padding-left: 25px;
		min-width: 0;
	}
	.article-details_d2vnmv > .columns > .small-stats-article > .meta {
		flex: 0 0 auto;
		margin-right: 5px;
	}
	.article-details_d2vnmv > .columns > .small-stats-article > .meta > .publisher,
	.article-details_d2vnmv > .columns > .small-stats-article > .meta > .author-date {
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}
	.article-details_d2vnmv > .columns > .small-stats-article > .meta > .author-date {
		display: flex;
		margin-top: 1px;
	}
	.article-details_d2vnmv > .columns > .small-stats-article > .meta > .author-date > .author {
		min-width: 0;
		overflow: hidden;
		text-overflow: ellipsis;
	}
	.article-details_d2vnmv > .columns > .small-stats-article > .meta > .author-date > .spacer {
		flex: 0 0 auto;
		width: 10px;
		text-align: center;
	}
	.article-details_d2vnmv > .columns > .small-stats-article > .meta > .author-date > .date {
		flex: 0 0 auto;
	}
	.article-details_d2vnmv > .columns > .small-stats-article > .stats {
		flex: 0 0 auto;
		display: flex;
		justify-content: space-between;
		align-items: flex-end;
		margin-right: 5px;
	}
	.article-details_d2vnmv > .columns > .small-stats-article > .stats > .reads-comments {
		display: flex;
	}
	.article-details_d2vnmv > .columns > .small-stats-article > .stats > .reads-comments > .stat {
		display: flex;
		font-size: 15px;
	}
	.article-details_d2vnmv > .columns > .small-stats-article > .stats > .reads-comments > .stat:not(:last-child) {
		margin-right: 10px;
	}
	.article-details_d2vnmv > .columns > .small-stats-article > .stats > .share-control_mnbspk > .children > .icon {
		width: 16px;
		height: 16px;
		cursor: pointer;
	}
	.article-details_d2vnmv > .columns > .bubble {
		width: 54px;
	}
	.article-details_d2vnmv > .columns > .bubble > .container > .length {
		top: 12%;
	}
	.article-details_d2vnmv > .columns > .share {
		display: none;
	}
}

